use set-psw component in auth pages

--- a/src/app/modules/auth/pages/create-access/create-access.component.html
+++ b/src/app/modules/auth/pages/create-access/create-access.component.html
@@ -4,12 +4,12 @@
         <div class="row justify-content-center">
           <div class="col-lg-5 col-md-6">
             <h1 class="text-white">Welcome to CO-OP Dashboard</h1>
-            <!-- <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p> -->
           </div>
         </div>
       </div>
     </div>
   </div>
+
 <!-- Page content -->
 <div class="container mt--8 pb-5">
   <div class="row justify-content-center">
@@ -20,25 +20,8 @@
                 <small>
                     You will have access to this dashboard through the account email <b>user_email@test.com</b>, you just have to create a password</small>
             </div>
-          <form role="form">
-            <div class="form-group mb-3">
-                <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Password" type="password">
-                </div>
-            </div>
-            <div class="input-group input-group-alternative">
-                <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                </div>
-                <input class="form-control" placeholder="Confirm password" type="password">
-            </div>
-            <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Use password</button>
-            </div>
-          </form>
+            <!-- Use password -->
+            <app-set-psw></app-set-psw>
         </div>
       </div>
     </div>
