--- a/src/app/modules/auth/pages/reset-psw/reset-psw.component.html
+++ b/src/app/modules/auth/pages/reset-psw/reset-psw.component.html
@@ -4,16 +4,10 @@
         <div class="row justify-content-center">
           <div class="col-lg-5 col-md-6">
             <h1 class="text-white">Change password</h1>
-            <!-- <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p> -->
           </div>
         </div>
       </div>
     </div>
-    <!-- <div class="separator separator-bottom separator-skew zindex-100">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
-    </div> -->
   </div>
 <!-- Page content -->
 <div class="container mt--8 pb-5">
@@ -21,25 +15,8 @@
     <div class="col-lg-5 col-md-7">
       <div class="card bg-secondary shadow border-0">
         <div class="card-body px-lg-5 py-lg-5">
-          <form role="form">
-            <div class="form-group mb-3">
-                <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    <input class="form-control" placeholder="Password" type="password">
-                </div>
-            </div>
-            <div class="input-group input-group-alternative">
-                <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                </div>
-                <input class="form-control" placeholder="Confirm password" type="password">
-            </div>
-            <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Change password</button>
-            </div>
-          </form>
+          <!-- Change password -->
+          <app-set-psw></app-set-psw>
         </div>
       </div>
     </div>
