--- a/src/app/modules/auth/components/set-psw/set-psw.component.html
+++ b/src/app/modules/auth/components/set-psw/set-psw.component.html
@@ -1,7 +1,7 @@
 <form role="form" [formGroup]="form" (ngSubmit)="sendFormInfo(password.value, validate_password.value)">
-    <div class="form-group">
+    <div class="form-group mb-3">
         <!-- inputs -->
-        <div class="input-group input-group-alternative mb-3">
+        <div class="input-group input-group-alternative">
             <div class="input-group-prepend">
                 <span class="input-group-text" [ngClass]="{'text-primary': pwdModeOn}" (click)="pwdModeOn = !pwdModeOn">
                     <i class="ni ni-lock-circle-open"></i>
@@ -10,7 +10,12 @@
             <input [formControl]="password" class="form-control" placeholder="Password"
                 [attr.type]="pwdModeOn ? 'text' : 'password'" autocomplete="on">
         </div>
+        <small class="text-danger" *ngIf="!password.valid && password.touched || !password.valid && password.touched">
+            Please provide a valid password.
+        </small>
+    </div>
 
+    <div class="form-group">
         <div class="input-group input-group-alternative">
             <div class="input-group-prepend">
                 <span class="input-group-text" [ngClass]="{'text-primary': validate_pwdModeOn}"
@@ -21,16 +26,20 @@
             <input [formControl]="validate_password" class="form-control" placeholder="Confirm password"
                 [attr.type]="validate_pwdModeOn ? 'text' : 'password'" autocomplete="on">
         </div>
-
-        <!-- error legends -->
-        <small [hidden]="!pwdsNotMatch" class="text-danger">
-            Passwords don't match
-        </small>
-
-        <small [hidden]="!submitErrorLegend" class="text-danger">
-            {{ submitErrorLegend }}
+        <small class="text-danger"
+            *ngIf="!validate_password.valid && validate_password.touched || !validate_password.valid && validate_password.touched">
+            Please provide a valid password.
         </small>
     </div>
+
+    <!-- error legends -->
+    <small [hidden]="!pwdsNotMatch" class="text-danger">
+        Passwords don't match
+    </small>
+
+    <small [hidden]="!submitErrorLegend" class="text-danger">
+        {{ submitErrorLegend }}
+    </small>
 
     <div class="text-center">
         <button type="submit" class="btn btn-primary my-4" [disabled]="!form.valid || submitting">
