--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -4,16 +4,10 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Sign in to Dashboard</h1>
-          <!-- <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p> -->
         </div>
       </div>
     </div>
   </div>
-  <!-- <div class="separator separator-bottom separator-skew zindex-100">
-    <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-      <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
-    </svg>
-  </div> -->
 </div>
 <!-- Page content -->
 <div class="container mt--8 pb-5">
@@ -21,41 +15,54 @@
     <div class="col-lg-5 col-md-7">
       <div class="card bg-secondary shadow border-0">
         <div class="card-body px-lg-5 py-lg-5">
-          <!-- <div class="text-center text-muted mb-4">
-            <small>Sign in</small>
-          </div> -->
-          <form role="form">
+          <form role="form" [formGroup]="form" (ngSubmit)="login(email.value, password.value)">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email">
+                <input [formControl]="email" class="form-control" placeholder="Email" type="email">
               </div>
+              <small class="text-danger" *ngIf="!email.valid && email.touched || !email.valid && email.touched">
+                Please provide a valid email.
+              </small>
             </div>
             <div class="form-group">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                  <span class="input-group-text" [ngClass]="{'text-primary': pwdModeOn}"
+                    (click)="pwdModeOn = !pwdModeOn">
+                    <i class="ni ni-lock-circle-open"></i>
+                  </span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input [formControl]="password" class="form-control" placeholder="Password"
+                  [attr.type]="pwdModeOn ? 'text' : 'password'">
               </div>
+              <small class="text-danger"
+                *ngIf="!password.valid && password.touched || !password.valid && password.touched">
+                Please provide a valid password.
+              </small>
             </div>
             <div class="custom-control custom-control-alternative custom-checkbox">
-              <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
+              <input [formControl]="remember_password" class="custom-control-input" id="customCheckLogin"
+                type="checkbox">
               <label class="custom-control-label" for=" customCheckLogin">
                 <span class="text-muted">Remember me</span>
               </label>
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Sign in</button>
+              <button type="submit" class="btn btn-primary my-4" [disabled]="!form.valid">
+                Sign in
+              </button>
             </div>
           </form>
         </div>
       </div>
       <div class="row mt-3">
         <div class="col-6">
-          <a href="javascript:void(0)" class="text-light" routerLink="/forgot-password"><small>Forgot password?</small></a>
+          <a href="javascript:void(0)" class="text-light" routerLink="/forgot-password">
+            <small>Forgot password?</small>
+          </a>
         </div>
       </div>
     </div>
