--- a/src/app/pages/chart-js/chart-js.component.html
+++ b/src/app/pages/chart-js/chart-js.component.html
@@ -1,62 +1,62 @@
-<div class="header bg-gradient-info pb-4 pt-5 pt-md-6">
-    <div class="container-fluid">
-      <div class="header-body">
-      </div>
+<div class="header bg-primary pb-4 pt-5 pt-md-6">
+  <div class="container-fluid">
+    <div class="header-body">
     </div>
   </div>
-  <div class="container-fluid mt-4">
-    <div class="row">
-      <div class="col-xl-4 mb-5 mb-xl-0">
-        <div class="card">
-          <div class="card-header bg-transparent">
-            <div class="row align-items-center">
-              <div class="col">
-                <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Month</h6>
-              </div>
-            </div>
-          </div>
-          <div class="card-body">
-            <!-- Chart -->
-            <div class="chart">
-              <!-- Chart wrapper -->
-              <canvas id="chart-inv-month" class="chart-canvas"></canvas>
+</div>
+<div class="container-fluid mt-4">
+  <div class="row">
+    <div class="col-xl-4 mb-5 mb-xl-0">
+      <div class="card">
+        <div class="card-header bg-transparent">
+          <div class="row align-items-center">
+            <div class="col">
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Month</h6>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-xl-4 mb-5 mb-xl-0">
-        <div class="card shadow">
-          <div class="card-header bg-transparent">
-            <div class="row align-items-center">
-              <div class="col">
-                <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Country</h6>
-              </div>
-            </div>
-          </div>
-          <div class="card-body">
-            <!-- Chart -->
-            <div class="chart">
-              <canvas id="chart-inv-country" class="chart-canvas"></canvas>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xl-4 mb-5 mb-xl-0">
-        <div class="card shadow">
-          <div class="card-header bg-transparent">
-            <div class="row align-items-center">
-              <div class="col">
-                <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Sector</h6>
-              </div>
-            </div>
-          </div>
-          <div class="card-body">
-            <!-- Chart -->
-            <div class="chart">
-              <canvas id="chart-inv-sector" class="chart-canvas"></canvas>
-            </div>
+        <div class="card-body">
+          <!-- Chart -->
+          <div class="chart">
+            <!-- Chart wrapper -->
+            <canvas id="chart-inv-month" class="chart-canvas"></canvas>
           </div>
         </div>
       </div>
     </div>
+    <div class="col-xl-4 mb-5 mb-xl-0">
+      <div class="card shadow">
+        <div class="card-header bg-transparent">
+          <div class="row align-items-center">
+            <div class="col">
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Country</h6>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <!-- Chart -->
+          <div class="chart">
+            <canvas id="chart-inv-country" class="chart-canvas"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-4 mb-5 mb-xl-0">
+      <div class="card shadow">
+        <div class="card-header bg-transparent">
+          <div class="row align-items-center">
+            <div class="col">
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Sector</h6>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <!-- Chart -->
+          <div class="chart">
+            <canvas id="chart-inv-sector" class="chart-canvas"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
