--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="header bg-gradient-info pb-4 pt-5 pt-md-6">
+<div class="header bg-primary pb-4 pt-5 pt-md-6">
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
@@ -6,10 +6,10 @@
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
-                  <span class="h2 font-weight-bold mb-0">350,897</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Revenue</h5>
+                  <span class="h2 font-weight-bold mb-0">900,400</span>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -20,7 +20,25 @@
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
                 <span class="text-nowrap">Since last month</span>
-              </p>
+              </p> -->
+
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Revenue</h5>
+                </div>
+                <div class="col text-right">
+                  <i class="fas fa-chart-bar"></i>
+                </div>
+              </div>
+              <hr class="my-2">
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-nowrap">US:</h5>
+                </div>
+                <div class="col text-right">
+                  900,400
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -29,19 +47,21 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                  <span class="h2 font-weight-bold mb-0">2,356</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Investment</h5>
                 </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                    <i class="fas fa-chart-pie"></i>
-                  </div>
+                <div class="col text-right">
+                  <i class="fas fa-chart-bar"></i>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                <span class="text-nowrap">Since last week</span>
-              </p>
+              <hr class="my-2">
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-nowrap">US:</h5>
+                </div>
+                <div class="col text-right">
+                  1,300,400
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -50,19 +70,18 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Transactions</h5>
                 </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                    <i class="fas fa-users"></i>
-                  </div>
+                <div class="col text-right">
+                  <i class="fas fa-chart-bar"></i>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                <span class="text-nowrap">Since yesterday</span>
-              </p>
+              <hr class="my-2">
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-nowrap">82.526<small>/ CR 2000</small></h5>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -71,19 +90,18 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Clicks</h5>
                 </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
-                  </div>
+                <div class="col text-right">
+                  <i class="fas fa-chart-bar"></i>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                <span class="text-nowrap">Since last month</span>
-              </p>
+              <hr class="my-2">
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-nowrap">81.626<small>/ CTR 245</small></h5>
+                </div>
+              </div>
             </div>
           </div>
         </div>
