--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Brand -->
-    <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
+    <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard/investment']">
       <img src="./assets/img/brand/logo.png" class="navbar-brand-img" alt="CO-OP">
     </a>
     <!-- User -->
@@ -30,7 +30,7 @@
             <span>Support</span>
           </a>
           <div class="dropdown-divider"></div>
-          <a href="#!" class="dropdown-item">
+          <a class="dropdown-item" (click)="logout()">
             <i class="ni ni-user-run"></i>
             <span>Logout</span>
           </a>
@@ -43,7 +43,7 @@
       <div class="navbar-collapse-header d-md-none">
         <div class="row">
           <div class="col-6 collapse-brand">
-            <a routerLinkActive="active" [routerLink]="['/dashboard']">
+            <a routerLinkActive="active" [routerLink]="['/dashboard/investment']">
               <img src="./assets/img/brand/logo-1.png">
             </a>
           </div>
