show request error messages in auth module components

--- a/src/app/modules/auth/pages/forgot-psw/forgot-psw.component.html
+++ b/src/app/modules/auth/pages/forgot-psw/forgot-psw.component.html
@@ -39,7 +39,7 @@
 
               <div *ngIf="reqStatus === 3" class="text-center mb-4">
                 <small class="text-danger">
-                  Request Failed. Please try again.
+                  {{ errorMsg }}
                 </small>
               </div>
 
