--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
-  <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
+  <nav class="navbar navbar-top navbar-horizontal navbar-expand-md">
     <div class="container px-4">
-      <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/dashboard/investment']">
-        <h1 class="text-white">HP COOP</h1>
+      <a class="brand" routerLinkActive="active" [routerLink]="['/dashboard/investment']">
+        <p class="text-white">Programa <b>HP COOP</b></p>
       </a>
     </div>
   </nav>
