update copys in sidebar component

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -23,16 +23,16 @@
         <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
           <a routerLinkActive="active" class="dropdown-item">
             <i class="ni ni-single-02"></i>
-            <span>My profile</span>
+            <span>Mi perfil</span>
           </a>
           <a routerLinkActive="active" class="dropdown-item">
             <i class="ni ni-support-16"></i>
-            <span>Support</span>
+            <span>Soporte</span>
           </a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">
             <i class="ni ni-user-run"></i>
-            <span>Logout</span>
+            <span>Cerrar sesión</span>
           </a>
         </div>
       </li>
@@ -58,7 +58,7 @@
       <!-- Form -->
       <form class="mt-4 mb-3 d-md-none">
         <div class="input-group input-group-rounded input-group-merge">
-          <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Search"
+          <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Buscar"
             aria-label="Search">
           <div class="input-group-prepend">
             <div class="input-group-text">
