--- a/src/app/pages/chart-js/chart-js.component.html
+++ b/src/app/pages/chart-js/chart-js.component.html
@@ -11,7 +11,7 @@
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
-              <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Month</h6>
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Inversión por mes</h6>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
-              <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Country</h6>
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Inversión por país</h6>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
             <div class="col">
-              <h6 class="text-uppercase text-muted ls-1 mb-1">Investment by Sector</h6>
+              <h6 class="text-uppercase text-muted ls-1 mb-1">Inversión por sector</h6>
             </div>
           </div>
         </div>
