use official colors in app theme (#15)
* update theme colors

* use solid black in titles for auth components

--- a/src/app/modules/auth/pages/create-access/create-access.component.html
+++ b/src/app/modules/auth/pages/create-access/create-access.component.html
@@ -8,9 +8,9 @@
             <img src="assets/img/brand/hp-logo.png">
           </div>
 
-          <p class="text-center text-muted bold my-4"><b>Bienvenido al Programa HP COOP</b></p>
+          <p class="text-center bold my-4"><b>Bienvenido al Programa HP COOP</b></p>
 
-          <div class="text-center text-muted my-4">
+          <div class="text-center my-4">
             <small>
               Recibiste acceso a esta plataforma a través de la cuenta de correo electrónico <b>{{ usermail }}</b>,
               ahora sólo tienes que crear una contraseña
