--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -8,7 +8,7 @@
             <img src="assets/img/brand/hp-logo.png">
           </div>
 
-          <p class="text-center text-muted bold my-4"><b>Iniciar sesión</b></p>
+          <p class="text-center bold my-4"><b>Iniciar sesión</b></p>
 
           <form role="form" [formGroup]="form" (ngSubmit)="login(email.value, password.value)">
             <div class="form-group mb-3">
