update material select custom style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,34 @@ $coop-dashboard-theme: mat-light-theme((
 th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   padding: 0 8px !important;
 }
+
+.mat-select-trigger {
+  border-radius: 0.375rem;
+  box-shadow: 0 1px 3px rgba(50, 50, 93, 0.15), 0 1px 0 rgba(0, 0, 0, 0.02);
+  border: 0;
+  transition: box-shadow 0.15s ease;
+  padding: 0.625rem 0.75rem;
+  white-space: nowrap;
+
+    .mat-select-value {
+      color: #767676;
+      font-size: 0.875rem;
+      font-weight: 400;
+      line-height: 1.5;
+    }
+
+    .mat-select-arrow {
+      color: #adb5bd;
+    }
+}
+
+.mat-select-panel:not([class*=mat-elevation-z]){
+  box-shadow: 0 1px 3px rgba(50, 50, 93, 0.15), 0 1px 0 rgba(0, 0, 0, 0.02);
+  border-radius: 0.375rem;
+}
+
+.mat-select-panel .mat-optgroup-label, .mat-select-panel .mat-option {
+  height: 2.5em !important;
+  color: #767676;
+  font-size: 0.875rem !important;
+}
