add get functionality to invite-user component (#22)
* add get requests in users-mngmt service

* add get requests to invite-users component

* add styles to loaders

--- a/src/app/modules/users-mngmt/pages/invite-user/invite-user.component.scss
+++ b/src/app/modules/users-mngmt/pages/invite-user/invite-user.component.scss
@@ -17,3 +17,19 @@
 .aditional-info {
     padding: 20px;
 }
+
+.loader-subgroup {
+    display: grid;
+    grid-template-columns: 20px 1fr;
+    grid-gap: 16px;
+}
+
+
+.button-loader {
+    display: flex;
+    justify-content: flex-end;
+
+    .bar-loader {
+        width: 130px;
+    }
+}
