--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,3 +108,56 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 .mat-paginator-page-size-select {
   width: 70px !important;
 }
+
+
+// **** OTHERS ****
+
+// *** loaders ***
+@keyframes indeterm-shimmer {
+  0% {
+    background-position: -368px 0;
+  }
+  100% {
+    background-position: 368px 0;
+  }
+}
+
+@mixin basic-loader {
+  animation-duration: 1s !important;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: indeterm-shimmer;
+  animation-timing-function: linear;
+  background:linear-gradient(to right, #f7f7f7 8%, #ededed 18%, #f7f7f7 23%);
+  background-size: 800px 104px;
+}
+.bar-loader {
+  @include basic-loader;
+  height: 16px;
+
+  &:not(:last-of-type) {
+    margin-bottom: 16px;
+  }
+
+  &.title {
+    width: 60%;
+  }
+
+  &.subtitle {
+    width: 20%;
+  }
+
+  &.dark {
+    background: #e8e8e8;
+    animation: none;
+  }
+
+  &.component {
+    border-radius: 0.375rem;
+    height: 40px;
+  }
+
+  &.checkbox {
+    width: 16px;
+  }
+}
