update bolder strong and p labels of theme styles

--- a/src/assets/scss/custom/_reboot.scss
+++ b/src/assets/scss/custom/_reboot.scss
@@ -17,3 +17,7 @@ body {
     font-family: 'HPSimplifiedLight',Arial,sans-serif !important;
     color: $black !important;
 }
+
+b, strong {
+    font-family: 'HPSimplified',Arial,sans-serif !important;  
+}
