add sidebar behaviour for users with role admin, hp and country (#28)
* show countries and retailers in sidebar component

* create dashboard module with country and retailer components as pages

* use query params to access to country and retailer components

* save sidebar selection in app-state service and share this data with navbar component

* preselect sidebar selection and titles in navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,10 @@
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active"
-      [routerLink]="['/dashboard/investment']">{{getTitle()}}</a>
+      [routerLink]="['/dashboard/investment']">
+
+      {{ customTitle ? customTitle + (customSubtitle ? ' - ' + customSubtitle : '') : getTitleByRoute() }}
+    </a>
     <!-- User -->
     <ul class="navbar-nav align-items-center d-none d-md-flex">
       <li class="nav-item" ngbDropdown placement="bottom-right">
