add basic template to retailer component (tab 1) (#36)
* add general tabs in retailer component

* add graph-line-series component

* use graph-line-series component and mat-table in retailer component

* delimit date-picker custom styles

--- a/src/app/modules/dashboard/pages/country/country.component.html
+++ b/src/app/modules/dashboard/pages/country/country.component.html
@@ -79,8 +79,8 @@
                     <span class="text-uppercase text-sm text-muted"><b>Inversión vs Revenue</b></span>
                 </div>
                 <div class="card-body">
-                    <app-graph-line-multiple [data]="investmentVsRevenue" name="investment-vs-revenue">
-                    </app-graph-line-multiple>
+                    <app-graph-line-comparison [data]="investmentVsRevenue" name="investment-vs-revenue">
+                    </app-graph-line-comparison>
                 </div>
             </div>
         </div>
